--- a/Loon/Conf/NobyDaSub.conf
+++ b/Loon/Conf/NobyDaSub.conf
@@ -7,5 +7,10 @@ http-request ^http:\/\/nobyda\.policy script-path=https://raw.githubusercontent.
 http-response ^https:\/\/ap(p|i)\.bilibili\.com\/(pgc\/view\/(v\d\/)?app|x(\/v\d)?\/view\/video)\/(season|online)\?access_key script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js, requires-body=true, tag=bili自动地区
 #可选, 适用于搜索指定地区的番剧
 http-request ^https:\/\/app\.bilibili\.com\/x\/v\d\/search(\/type)?\?.+?%20(%E6%B8%AF|%E5%8F%B0|%E4%B8%AD)& script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js, requires-body=true, tag=bili自动地区(搜索)
+
+# 巴姆哈特
+[Script]
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Bahamut/BahamutDailyBonus.js, wake-system=1, timeout=300
+
 [Mitm]
 hostname = ap?.bilibili.com
