--- a/Loon/Conf/NobyDaSub.conf
+++ b/Loon/Conf/NobyDaSub.conf
@@ -10,7 +10,7 @@ http-request ^https:\/\/app\.bilibili\.com\/x\/v\d\/search(\/type)?\?.+?%20(%E6%
 
 # 巴姆哈特
 [Script]
-cron "0 8 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Bahamut/BahamutDailyBonus.js, wake-system=1, timeout=300
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Bahamut/BahamutDailyBonus.js, wake-system=1, timeout=300, tag=巴姆哈特签到
 
 [Mitm]
 hostname = ap?.bilibili.com
