--- a/QuantumultX/RewriteRemote.conf
+++ b/QuantumultX/RewriteRemote.conf
@@ -5,6 +5,7 @@
 # REWRITE: 799
 # MITM: 539
 
+^https:\/\/ap(p|i)\.bilibili\.com\/(pgc\/view\/(v\d\/)?app|x(\/v\d)?\/view\/video)\/(season|online)\?access_key url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
 ^https:\/\/(www|cn)\.pornhub\.com\/_xa\/ads.* url reject
 ^https:\/\/.*\.bebi\.com\/.* url reject
 ^https:\/\/api-ks\.wtzw\.com\/api\/v(1|2)\/(float-adv|init-adv|reader-adv) url reject
