--- a/QuantumultX/RewriteRemote.conf
+++ b/QuantumultX/RewriteRemote.conf
@@ -6,6 +6,7 @@
 # MITM: 539
 
 ^https:\/\/ap(p|i)\.bilibili\.com\/(pgc\/view\/(v\d\/)?app|x(\/v\d)?\/view\/video)\/(season|online)\?access_key url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
+^https:\/\/app\.bilibili\.com\/x\/v\d\/search(\/type)?\?.+?%20(%E6%B8%AF|%E5%8F%B0|%E4%B8%AD)& url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
 ^https:\/\/(www|cn)\.pornhub\.com\/_xa\/ads.* url reject
 ^https:\/\/.*\.bebi\.com\/.* url reject
 ^https:\/\/api-ks\.wtzw\.com\/api\/v(1|2)\/(float-adv|init-adv|reader-adv) url reject
