--- a/QuantumultX/RewriteRemote.conf
+++ b/QuantumultX/RewriteRemote.conf
@@ -755,7 +755,7 @@
 ^https?:\/\/ugc\.moji001\.com\/sns\/json\/profile\/get_unread url reject-img
 ^https?:\/\/ulogs\.umeng\.com url reject-img
 ^https?:\/\/ulogs\.umengcloud\.com url reject-img
-#^https?:\/\/update\.pan\.baidu\.com\/statistics url reject
+^https?:\/\/update\.pan\.baidu\.com\/statistics url reject
 ^https?:\/\/ups\.youku\.com\/.*?needad=1& url reject
 ^https?:\/\/v\.17173\.com\/api\/Allyes\/ url reject-img
 ^https?:\/\/v\.cctv\.com\/.+?850 url reject
